--- a/index.html
+++ b/index.html
@@ -8,10 +8,59 @@
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 
-    <!-- CORRECCIÓN: Se eliminó el importmap. Se usarán scripts globales de Three.js para evitar conflictos. -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/DragControls.js"></script>
+    <!-- Se restaura el importmap para el funcionamiento del editor 3D. -->
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.module.js",
+                "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.152.2/examples/jsm/"
+            }
+        }
+    </script>
+    
+    <!-- CORRECCIÓN DEFINITIVA: Componente AR en su propio script para usar el THREE de A-Frame y evitar conflictos. -->
+    <script>
+        AFRAME.registerComponent('ar-rotator', {
+            schema: { rotationFactor: { type: 'number', default: 0.5 } },
+            init: function () {
+                this.isVisible = false;
+                this.isDragging = false;
+                this.previousDrag = { x: 0, y: 0 };
+                const canvas = this.el.sceneEl.canvas;
+
+                const startDrag = (x, y) => {
+                    if (this.isVisible) {
+                        this.isDragging = true;
+                        this.previousDrag = { x, y };
+                    }
+                };
+
+                const drag = (x, y) => {
+                    if (this.isDragging && this.isVisible) {
+                        const deltaX = x - this.previousDrag.x;
+                        const deltaY = y - this.previousDrag.y;
+                        this.el.object3D.rotation.y += THREE.MathUtils.degToRad(deltaX * this.data.rotationFactor);
+                        this.el.object3D.rotation.x += THREE.MathUtils.degToRad(deltaY * this.data.rotationFactor);
+                        this.previousDrag = { x, y };
+                    }
+                };
+
+                const endDrag = () => { this.isDragging = false; };
+
+                canvas.addEventListener('touchstart', (e) => { if (e.touches.length === 1) startDrag(e.touches[0].clientX, e.touches[0].clientY); });
+                canvas.addEventListener('touchmove', (e) => { if (e.touches.length === 1) drag(e.touches[0].clientX, e.touches[0].clientY); });
+                canvas.addEventListener('touchend', endDrag);
+
+                canvas.addEventListener('mousedown', (e) => startDrag(e.clientX, e.clientY));
+                canvas.addEventListener('mousemove', (e) => drag(e.clientX, e.clientY));
+                canvas.addEventListener('mouseup', endDrag);
+                canvas.addEventListener('mouseleave', endDrag);
+
+                this.el.parentEl.addEventListener('targetFound', () => { this.isVisible = true; });
+                this.el.parentEl.addEventListener('targetLost', () => { this.isVisible = false; });
+            },
+        });
+    </script>
 
     <style>
         /* Estilos generales y para el modo AR */
@@ -104,7 +153,7 @@
 <body class="bg-gray-200 text-gray-800 font-sans">
     <div id="app" class="relative app-container container mx-auto p-6 md:p-8 max-w-5xl bg-white rounded-xl shadow-lg my-8 overflow-y-auto" style="max-height: 85vh;">
         <!-- VERSIÓN -->
-        <div id="version-tag" class="absolute top-2 right-4 text-xs text-gray-400">v1.4</div>
+        <div id="version-tag" class="absolute top-2 right-4 text-xs text-gray-400">v1.5</div>
 
         <div class="flex justify-center items-center mb-6">
              <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/logofundacion.jpg" alt="Logo Prototipo" class="h-20 w-auto mr-4" onerror="this.onerror=null;this.src='https://placehold.co/120x80/e2e8f0/94a3b8?text=Logo';">
@@ -227,51 +276,13 @@
         <p class="text-white text-lg mt-4">Iniciando cámara...</p>
     </div>
     
-    <script>
-        // Componente de A-Frame para rotación
-        AFRAME.registerComponent('ar-rotator', {
-            schema: { rotationFactor: { type: 'number', default: 0.5 } },
-            init: function () {
-                this.isVisible = false;
-                this.isDragging = false;
-                this.previousDrag = { x: 0, y: 0 };
-                const canvas = this.el.sceneEl.canvas;
+    <script type="module">
+        // Importaciones de Three.js para el editor
+        import * as THREE from 'three';
+        import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+        import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
+        import { DragControls } from 'three/addons/controls/DragControls.js';
 
-                const startDrag = (x, y) => {
-                    if (this.isVisible) {
-                        this.isDragging = true;
-                        this.previousDrag = { x, y };
-                    }
-                };
-
-                const drag = (x, y) => {
-                    if (this.isDragging && this.isVisible) {
-                        const deltaX = x - this.previousDrag.x;
-                        const deltaY = y - this.previousDrag.y;
-                        // Usar el THREE global proveído por A-Frame
-                        this.el.object3D.rotation.y += THREE.MathUtils.degToRad(deltaX * this.data.rotationFactor);
-                        this.el.object3D.rotation.x += THREE.MathUtils.degToRad(deltaY * this.data.rotationFactor);
-                        this.previousDrag = { x, y };
-                    }
-                };
-
-                const endDrag = () => { this.isDragging = false; };
-
-                canvas.addEventListener('touchstart', (e) => { if (e.touches.length === 1) startDrag(e.touches[0].clientX, e.touches[0].clientY); });
-                canvas.addEventListener('touchmove', (e) => { if (e.touches.length === 1) drag(e.touches[0].clientX, e.touches[0].clientY); });
-                canvas.addEventListener('touchend', endDrag);
-
-                canvas.addEventListener('mousedown', (e) => startDrag(e.clientX, e.clientY));
-                canvas.addEventListener('mousemove', (e) => drag(e.clientX, e.clientY));
-                canvas.addEventListener('mouseup', endDrag);
-                canvas.addEventListener('mouseleave', endDrag);
-
-                this.el.parentEl.addEventListener('targetFound', () => { this.isVisible = true; });
-                this.el.parentEl.addEventListener('targetLost', () => { this.isVisible = false; });
-            },
-        });
-
-        // Lógica principal de la aplicación en un script estándar
         document.addEventListener('DOMContentLoaded', () => {
             // Estado global de la aplicación
             const state = {
@@ -283,7 +294,7 @@
             // Objeto para manejar la escena del editor 3D
             let editor = {
                 scene: null, camera: null, renderer: null, controls: null, dragControls: null,
-                loader: new THREE.GLTFLoader(),
+                loader: new GLTFLoader(),
                 textureLoader: new THREE.TextureLoader(),
                 currentTarget: null,
                 currentPlane: null,
@@ -396,7 +407,7 @@
                 editor.renderer = new THREE.WebGLRenderer({ canvas: canvas, antialias: true });
                 editor.renderer.setSize(container.clientWidth, container.clientHeight);
                 editor.renderer.setPixelRatio(window.devicePixelRatio);
-                editor.controls = new THREE.OrbitControls(editor.camera, editor.renderer.domElement);
+                editor.controls = new OrbitControls(editor.camera, editor.renderer.domElement);
                 editor.controls.enableDamping = true;
                 const animate = () => { requestAnimationFrame(animate); editor.controls.update(); editor.renderer.render(editor.scene, editor.camera); };
                 animate();
@@ -448,7 +459,7 @@
                     editor.scene.add(editor.currentTarget);
                     updateModelTransformFromState(asset.transform);
                     updateTransformInputs(asset.transform);
-                    editor.dragControls = new THREE.DragControls([editor.currentTarget], editor.camera, editor.renderer.domElement);
+                    editor.dragControls = new DragControls([editor.currentTarget], editor.camera, editor.renderer.domElement);
                     editor.dragControls.addEventListener('dragstart', () => editor.controls.enabled = false);
                     editor.dragControls.addEventListener('dragend', (event) => {
                         editor.controls.enabled = true;
@@ -732,6 +743,4 @@
     </script>
 </body>
 </html>
-
-
 
