--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -666,8 +666,5 @@
     </script>
 </body>
 </html>
-
-
-
 
 
