--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Propuesta en Salud en Visor de Modelos AR</title>
+    <title>Propuesta en Salud con Visor de Modelos AR</title>
     <!-- Favicon -->
     <link rel="icon" href="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/favicon3dAR.ico">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -801,5 +801,6 @@
     </script>
 </body>
 </html>
+
 
 
